Fixed Sidebar TablePanel being too wide.

--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -362,10 +362,6 @@ button#button2.ui-pushbutton.jsdialog.sidebar {
 	line-height: 32px;
 }
 
-#TableEditPanelPanelExpander #grid1 > tr > td {
-	width: 176px;
-}
-
 #rowheight-input {
 	margin-inline-start: 0 !important;
 }
